# FolderPlay

./: .gitignore  Cargo.toml  README.md  build.rs  io.github.juancarlosbernal.FolderPlay.json  meson.build  org.gnome.folderplay.json
build-aux/: cargo.sh
data/: io.github.juancarlosbernal.FolderPlay.desktop.in  io.github.juancarlosbernal.FolderPlay.gschema.xml  io.github.juancarlosbernal.FolderPlay.metainfo.xml.in  io.github.juancarlosbernal.FolderPlay.service.in  meson.build  org.gnome.folderplay.desktop.in  org.gnome.folderplay.gschema.xml  org.gnome.folderplay.metainfo.xml.in  org.gnome.folderplay.service.in
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  de.po  es.po  folderplay.pot  fr.po  meson.build  pt.po  ru.po
src/: application.rs  config.rs  config.rs.in  cover_picture.rs  file_item.rs  folderplay.gresource.xml  folderplay.in  grid_cover.rs  library_db.py  library_db.rs  main.py  main.rs  meson.build  player.py  player.rs  preferences.py  preferences.rs  shortcuts-dialog.ui  style.css  window.py  window.ui
src/window/: imp.rs  mod.rs
